Fixes button alignment

--- a/app/app.css
+++ b/app/app.css
@@ -197,7 +197,7 @@
   /*background-color: lightgray;*/
   /*border-radius: 5px;*/
   
-  margin-top:85%;  
+  margin-top:50%;  
 }
 
 /*
